--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,20 @@ name = asyncat
 author = Gray King
 author-email = grayking.w@gmail.com
 summary = "An asynchronous Github API Client based on Tornado."
-
+classifiers = 
+    Development Status :: 2 - Pre-Alpha
+    Intended Audience :: Developers
+    License :: OSI Approved
+    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
+    Natural Language :: Chinese (Simplified)
+    Programming Language :: Python
+    Programming Language :: Python :: 2
+    Programming Language :: Python :: 2.7
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.4
+    Programming Language :: Python :: 3.5
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: Implementation :: CPython
 [files]
 packages = asyncat
 
