--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,9 @@ classifiers =
     Programming Language :: Python :: 3.5
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: Implementation :: CPython
+    Topic :: Internet :: WWW/HTTP
+    Topic :: Software Development :: Libraries
+    Topic :: Utilities
 [files]
 packages = asyncat
 
