Add Apache 2.0 LICENSE

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,8 +6,7 @@ summary = "An asynchronous Github API Client based on Tornado."
 classifiers = 
     Development Status :: 2 - Pre-Alpha
     Intended Audience :: Developers
-    License :: OSI Approved
-    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
+    License :: OSI Approved :: Apache Software License
     Natural Language :: Chinese (Simplified)
     Programming Language :: Python
     Programming Language :: Python :: 2
