--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = asyncat
 author = Gray King
 author-email = grayking.w@gmail.com
-summary = "An asynchronous Github API Client based on Tornado."
+summary = "An asynchronous Github API library based on Tornado."
 classifiers = 
     Development Status :: 2 - Pre-Alpha
     Intended Audience :: Developers
