--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,8 @@ name = asyncat
 author = Gray King
 author-email = grayking.w@gmail.com
 summary = "An asynchronous Github API library based on Tornado."
+description-file = README.rst
+
 classifiers = 
     Development Status :: 2 - Pre-Alpha
     Intended Audience :: Developers
