Add issue implementations

--- a/tox.ini
+++ b/tox.ini
@@ -25,4 +25,4 @@ deps =
     python-dotenv
     pylint
 commands =
-    pylint -d W0221 asyncat tests setup.py
+    pylint -d W0221,W0201 asyncat tests setup.py
